--- a/index.html
+++ b/index.html
@@ -154,6 +154,15 @@
     </section>
 
 
+    <!-- Секция 4: Регистрация -->
+    <section class="section reg">
+      <h2>Регистрация слушателей</h2>
+      <p>Заполните форму для участия на курсе:</p>
+      <button data-tally-open="Np5rLj" data-tally-width="600" data-tally-emoji-text="📄" data-tally-emoji-animation="bounce" class="btn">
+        <i class="fa-solid fa-paper-plane"></i> Подать заявку
+      </button>
+    </section>
+
     <!-- 5 FAQ -->
     <section class="section faq">
       <h2>Часто задаваемые вопросы (FAQ)</h2>
@@ -188,8 +197,9 @@
 <section class="section question-box">
   <h2>Не нашли ответ? Задать вопрос</h2>
   <!-- Ваш Tally-embed -->
-  <iframe src="https://tally.so/r/D42KWq?alignLeft=1&hideTitle=1" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0" title="Question box"></iframe>
-</section>>
+ <button data-tally-open="D42KWq" data-tally-width="600" data-tally-emoji-text="❓" data-tally-emoji-animation="bounce" class="btn">
+        <i class="fa-solid fa-paper-plane"></i> Задать вопрос
+  </button>
     </section>
 
     <!-- 7 Подвал -->
