--- a/index.html
+++ b/index.html
@@ -158,9 +158,13 @@
     <section class="section reg">
       <h2>Регистрация слушателей</h2>
       <p>Заполните форму для участия на курсе:</p>
-      <button data-tally-open="Np5rLj" data-tally-width="600" data-tally-emoji-text="📄" data-tally-emoji-animation="bounce" class="btn">
+
+      
+     <div class="center">
+       <button data-tally-open="Np5rLj" data-tally-width="600" data-tally-emoji-text="📄" data-tally-emoji-animation="bounce" class="btn">
         <i class="fa-solid fa-paper-plane"></i> Подать заявку
       </button>
+       </div>
     </section>
 
     <!-- 5 FAQ -->
@@ -196,9 +200,11 @@
     <!-- 6 Вторая форма «Задать вопрос» -->
 <section class="section question-box">
   <h2>Не нашли ответ? Задать вопрос</h2>
- <button data-tally-open="D42KWq" data-tally-width="600" data-tally-emoji-text="❓" data-tally-emoji-animation="bounce" class="btn">
+ <div class="center">
+  <button data-tally-open="D42KWq" data-tally-width="600" data-tally-emoji-text="❓" data-tally-emoji-animation="bounce" class="btn">
         <i class="fa-solid fa-paper-plane"></i> Задать вопрос
   </button>
+   </div>
     </section>
 
     <!-- 7 Подвал -->
