--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
     .center{text-align:center}
     .hero{background:var(--c-hero)}.short{background:var(--c-short)}.audience{background:var(--c-audience)}.program{background:var(--c-program)}.reg{background:var(--c-reg)}.contacts{background:var(--c-contacts)}
 
+    /* Центрирование всех заголовков секций */
+    h2 {
+      text-align: center;
+    }
+  </style>
+</head>
+
     /* Подвал */
     .footer{margin-top:4rem;font-size:.8rem;text-align:center;opacity:.6}
 
